--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta description="GJVIS is a boutique software delivery consultancy based in London, United Kingdom.">
+    <meta name="description" content="GJVIS is a boutique software delivery consultancy based in London, United Kingdom.">
     <title>GJVIS - software delivery specialists</title>
 
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600' rel='stylesheet' type='text/css'>
