Slight copy change

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li>Development</li>
           <li>DevOps</li>
           <li>Architecture</li>
-          <li>Thought Leadership</li>
+          <li>Leadership</li>
         </ul>
       </header>
 
